After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 744752 - handle wayland failing more gracefully
handle wayland failing more gracefully
Status: RESOLVED FIXED
Product: gnome-session
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Session Maintainers
Session Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-02-18 19:13 UTC by Ray Strode [halfline]
Modified: 2015-02-18 19:14 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
app: drop unused variable from state struct (1.96 KB, patch)
2015-02-18 19:13 UTC, Ray Strode [halfline]
none Details | Review
app: changed registered from signal to property (27.86 KB, patch)
2015-02-18 19:13 UTC, Ray Strode [halfline]
none Details | Review
manager: handle autorestart app death before registration (3.98 KB, patch)
2015-02-18 19:13 UTC, Ray Strode [halfline]
none Details | Review

Description Ray Strode [halfline] 2015-02-18 19:13:44 UTC
Right now if wayland fails to start we just sort of hang, trying
to show a fail whale on a non-existent display server.

This patchset fixes gnome-session to exit instead.
Comment 1 Ray Strode [halfline] 2015-02-18 19:13:47 UTC
Created attachment 297143 [details] [review]
app: drop unused variable from state struct
Comment 2 Ray Strode [halfline] 2015-02-18 19:13:51 UTC
Created attachment 297144 [details] [review]
app: changed registered from signal to property

This will let us query it after the fact.
Comment 3 Ray Strode [halfline] 2015-02-18 19:13:55 UTC
Created attachment 297145 [details] [review]
manager: handle autorestart app death before registration

Right now we rely on autorestart apps to get their death
handled when they disconnect from the bus.  This only works
if they've registered, though.

This commit makes sure the restart_app codepath gets called for
autorestart apps even if they haven't registered yet.

(This commit makes gnome-session exit if the display server couldn't
 be started)
Comment 4 Ray Strode [halfline] 2015-02-18 19:14:28 UTC
Attachment 297143 [details] pushed as b88aa0a - app: drop unused variable from state struct
Attachment 297144 [details] pushed as fdaa1e7 - app: changed registered from signal to property
Attachment 297145 [details] pushed as 51c36a1 - manager: handle autorestart app death before registration