app: drop unused variable from state struct

https://bugzilla.gnome.org/show_bug.cgi?id=744752